[tool.poetry]
name = "project_name"
version = "0.1.0"
description = ""
authors = ["Raluca Carare <carare.raluca27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
black = "isort"
isort = "^4.3.21"
pylint = "isort pylint"

[tool.poetry.dev-dependencies]
pylint = "^2.5.0"
isort = "pylint"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
